--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -9,9 +9,9 @@
 
 name: OpenWrt-CI
 
-on:
-  push:
-    branches: 
+# on:
+  # push:
+    # branches: 
       - master
   #     ↑↑↑ 改成你的分支名, 一般是master
   # schedule:
@@ -57,6 +57,15 @@ jobs:
           sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
+      - name: 自定义插件主题
+        run: |
+          cd package
+          mkdir openwrt-packages
+          cd openwrt-packages
+          git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
+          git clone https://github.com/Ameykyl/luci-app-koolproxyR.git
+          git clone https://github.com/rosywrt/luci-theme-rosy.git
+          git clone https://github.com/Lienol/openwrt-package.git
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
@@ -131,14 +140,14 @@ jobs:
           EOF
           # 常用LuCI插件选择:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-S-S R-plus=y
-          CONFIG_PACKAGE_luci-app-S-S R-plus —> Include s-s New Versiong=y
-          CONFIG_PACKAGE_luci-app-S-S R-plus —> Include V2ray=y
-          CONFIG_PACKAGE_luci-app-S-S R-plus —> Include Trojan=y
-          CONFIG_PACKAGE_luci-app-S-S R-plus —> Include s-sR Socks and Tunnel=y
-          CONFIG_PACKAGE_luci-app-S-S R-plus —> Include s-sR Server=y
-          CONFIG_PACKAGE_luci-app-S-S R-plus —> Include Kcptun=y
-          CONFIG_PACKAGE_luci-app-flowoffload=y
+          CONFIG_PACKAGE_luci-app-ssr-plus=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_Include_ss New Versiong=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_Include_V2ray=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_Include_Trojan=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_Include_ssr Socks and Tunnel=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_Include_ssr Server=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
+          CONFIG_PACKAGE_luci-app-sfe=y
           CONFIG_PACKAGE_luci-app-adbyby-plus=y
           CONFIG_PACKAGE_luci-app-aria2=y
           CONFIG_PACKAGE_luci-app-baidupcs-web=y
@@ -169,11 +178,20 @@ jobs:
           CONFIG_PACKAGE_luci-app-mwan3=y
           CONFIG_PACKAGE_luci-app-mwan3helper=y
           CONFIG_PACKAGE_luci-app-statistics=y
+          CONFIG_PACKAGE_luci-app-koolproxyR=y
+          CONFIG_PACKAGE_luci-app-aliddns=y
+          CONFIG_PACKAGE_luci-app-syncdial=y
+          CONFIG_PACKAGE_luci-app-acme=y
+          CONFIG_PACKAGE_luci-app-firewall=y
+          CONFIG_PACKAGE_luci-app-qos=y
+          CONFIG_PACKAGE_
           EOF
           # LuCI主题:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-theme-argon=y
           CONFIG_PACKAGE_luci-theme-netgear=y
+          CONFIG_PACKAGE_luci-theme-atmaterial=y
+          CONFIG_PACKAGE_luci-theme-rosy=y
           EOF
           # 常用软件包:
           cat >> .config <<EOF
